--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
