--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
+        "mews/captcha": "^3.3",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
